# EEEL

./: CMakeLists.txt  Makefile  README.md
script/: analysis.sh  train.sh
script/output/analysis_logs/: ee_analysis_main.ERROR  ee_analysis_main.FATAL  ee_analysis_main.INFO  ee_analysis_main.ThinkPadP51.giacomo.log.FATAL.20190501-210828.6345  ee_analysis_main.ThinkPadP51.giacomo.log.INFO.20190501-210841.6364  ee_analysis_main.ThinkPadP51.giacomo.log.WARNING.20190501-210841.6364  ee_analysis_main.WARNING
src/: context.cpp  hierarchy.cpp  pl_math.h
tools/: ee_analysis_main.cpp  ee_main.cpp
